--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "firebase": "^10.0.0",
+    "firebase-tools":"^14.12.1",
     "@supabase/supabase-js": "^2.39.0",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
